--- a/test/Spirebyte.Services.Git.Tests.Unit/Spirebyte.Services.Git.Tests.Unit.csproj
+++ b/test/Spirebyte.Services.Git.Tests.Unit/Spirebyte.Services.Git.Tests.Unit.csproj
@@ -7,6 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="coverlet.msbuild" Version="3.1.2">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="FluentAssertions" Version="6.3.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0-preview-20211130-02" />
         <PackageReference Include="NSubstitute" Version="4.2.2" />
