Switched to dynamic gateway

--- a/src/Spirebyte.Services.Git.API/appsettings.Docker.json
+++ b/src/Spirebyte.Services.Git.API/appsettings.Docker.json
@@ -5,15 +5,12 @@
   },
   "consul": {
     "enabled": true,
-    "url": "http://spirebyte-consul:8500",
-    "service": "spirebyte-git-service",
-    "address": "spirebyte-git-service",
-    "port": "80"
+    "url": "http://spirebyte-consul:8500"
   },
   "fabio": {
     "enabled": true,
     "url": "http://spirebyte-fabio:9999",
-    "service": "spirebyte-git-service"
+    "service": "git-service"
   },
   "httpClient": {
     "type": "fabio",
