--- a/src/Spirebyte.Services.Git.API/appsettings.json
+++ b/src/Spirebyte.Services.Git.API/appsettings.json
@@ -13,7 +13,11 @@
     "pingEnabled": true,
     "pingEndpoint": "ping",
     "pingInterval": 3,
-    "removeAfterInterval": 10
+    "removeAfterInterval": 10,
+    "meta" : {
+      "yarp" : "on",
+      "yarp_path" : "/git-service/{**catchall}"
+    }
   },
   "fabio": {
     "enabled": true,
