Added dynamic consul

--- a/src/Spirebyte.Services.Git.API/appsettings.Docker.json
+++ b/src/Spirebyte.Services.Git.API/appsettings.Docker.json
@@ -5,7 +5,10 @@
   },
   "consul": {
     "enabled": true,
-    "url": "http://spirebyte-consul:8500"
+    "url": "http://spirebyte-consul:8500",
+    "service": "git-service",
+    "address": "[hostname]",
+    "port": "80"
   },
   "fabio": {
     "enabled": true,
