--- a/src/Spirebyte.Services.Git.API/appsettings.json
+++ b/src/Spirebyte.Services.Git.API/appsettings.json
@@ -16,7 +16,7 @@
     "removeAfterInterval": 10,
     "meta" : {
       "yarp" : "on",
-      "yarp_path" : "/git-service/{**catchall}"
+      "yarp_path" : "git-service/{**catchall}"
     }
   },
   "fabio": {
