Update permission system

--- a/src/Spirebyte.Services.Git.API/appsettings.Docker.json
+++ b/src/Spirebyte.Services.Git.API/appsettings.Docker.json
@@ -19,6 +19,7 @@
     "type": "fabio",
     "retries": 3,
     "services": {
+      "projects": "projects-service",
       "identity": "spirebyte-identity-service"
     }
   },
