--- a/src/Spirebyte.Services.Git.API/appsettings.json
+++ b/src/Spirebyte.Services.Git.API/appsettings.json
@@ -28,6 +28,7 @@
     "type": "",
     "retries": 3,
     "services": {
+      "projects": "http://localhost:5001",
       "identity": "http://localhost:5004"
     },
     "requestMasking": {
