Switch httpclient to consul

--- a/src/Spirebyte.Services.Git.API/appsettings.Docker.json
+++ b/src/Spirebyte.Services.Git.API/appsettings.Docker.json
@@ -16,7 +16,7 @@
     "service": "git-service"
   },
   "httpClient": {
-    "type": "fabio",
+    "type": "consul",
     "retries": 3,
     "services": {
       "projects": "projects-service",
