Started change to new framework

--- a/src/Spirebyte.Services.Git.API/appsettings.Docker.json
+++ b/src/Spirebyte.Services.Git.API/appsettings.Docker.json
@@ -1,102 +1,38 @@
 {
-  "app": {
-    "name": "Spirebyte Git Service",
-    "version": "1"
-  },
   "consul": {
     "enabled": true,
     "url": "http://spirebyte-consul:8500",
-    "service": "git-service",
-    "address": "[hostname]",
-    "port": "80"
-  },
-  "fabio": {
-    "enabled": true,
-    "url": "http://spirebyte-fabio:9999",
-    "service": "git-service"
-  },
-  "httpClient": {
-    "type": "consul",
-    "retries": 3,
-    "services": {
-      "projects": "projects-service",
-      "identity": "spirebyte-identity-service"
+    "service": {
+      "useDnsName": "true",
+      "meta": {
+        "yarp": "on",
+        "yarp_path": "git-service/{**catchall}"
+      }
     }
   },
-  "logger": {
-    "console": {
-      "enabled": true
-    },
-    "elk": {
-      "enabled": false,
-      "url": "http://spirebyte-elk:9200"
-    },
-    "file": {
-      "enabled": false,
-      "path": "logs/logs.txt",
-      "interval": "day"
-    },
+  "httpClient": {
+    "services": {}
+  },
+  "mongo": {
+    "enabled": true,
+    "connectionString": "mongodb://root:4UeQAJgTqbCwjPCH@spirebyte-mongo:27017/?authSource=admin"
+  },
+  "rabbitMQ": {
+    "enabled": true,
+    "connectionString": "host=spirebyte-rabbitmq;port=5672;virtualHost=/;username=guest;password=guest"
+  },
+  "serilog": {
     "seq": {
       "enabled": true,
       "url": "http://spirebyte-seq:5341",
       "apiKey": "secret"
     }
   },
-  "jaeger": {
+  "tracing": {
     "enabled": true,
-    "serviceName": "git",
-    "udpHost": "spirebyte-jaeger",
-    "udpPort": 6831,
-    "maxPacketSize": 0,
-    "sampler": "const",
-    "excludePaths": [
-      "/",
-      "/ping",
-      "/metrics"
-    ]
-  },
-  "mongo": {
-    "connectionString": "mongodb://root:4UeQAJgTqbCwjPCH@spirebyte-mongo:27017/?authSource=admin",
-    "database": "spirebyte-repositories-service",
-    "seed": false
-  },
-  "rabbitMq": {
-    "hostnames": [
-      "spirebyte-rabbitmq"
-    ]
-  },
-  "redis": {
-    "connectionString": "spirebyte-redis",
-    "instance": "git:"
-  },
-  "swagger": {
-    "enabled": true,
-    "reDocEnabled": false,
-    "name": "v1",
-    "title": "API",
-    "version": "v1",
-    "routePrefix": "docs",
-    "includeSecurity": true
-  },
-  "metrics": {
-    "tags": {
-      "env": "production",
-      "server": "vps"
-    }
-  },
-  "vault": {
-    "enabled": false,
-    "url": "http://spirebyte-vault:8200",
-    "kv": {
-      "enabled": false
-    },
-    "pki": {
-      "enabled": false
-    },
-    "lease": {
-      "mongo": {
-        "enabled": false
-      }
+    "jaeger": {
+      "agentHost": "spirebyte-jaeger",
+      "agentPort": 6831
     }
   }
 }
