--- a/src/Spirebyte.Services.Git.API/appsettings.json
+++ b/src/Spirebyte.Services.Git.API/appsettings.json
@@ -1,84 +1,130 @@
 {
   "app": {
-    "name": "Spirebyte Git Service",
-    "service": "git-service",
-    "version": "1"
+    "name": "Spirebyte git-service",
+    "version": "1",
+    "project": "Spirebyte"
+  },
+  "auth": {
+    "certificate": {
+      "location": "Certs/localhost.cer"
+    },
+    "jwt": {
+      "validIssuer": "https://sts.spirebyte.nl",
+      "validAudience": "spirebyte",
+      "validateAudience": true,
+      "validateIssuer": true,
+      "validateLifetime": true
+    }
   },
   "consul": {
     "enabled": true,
     "url": "http://localhost:8500",
-    "service": "git-service",
-    "address": "localhost",
-    "port": "5004",
-    "pingEnabled": true,
-    "pingEndpoint": "ping",
-    "pingInterval": 3,
-    "removeAfterInterval": 10,
-    "meta": {
-      "yarp": "on",
-      "yarp_path": "git-service/{**catchall}"
+    "service": {
+      "name": "git-service",
+      "url": "http://host.docker.internal:5009"
+    },
+    "healthCheck": {
+      "endpoint": "ping",
+      "interval": "00.00:00:05",
+      "deregisterInterval": "00.00:00:05"
     }
   },
-  "fabio": {
+  "cors": {
     "enabled": true,
-    "url": "http://localhost:9999",
-    "service": "git-service"
+    "allowCredentials": true,
+    "allowedOrigins": [
+      "http://localhost:4200",
+      "http://localhost:4201",
+      "http://localhost:5000",
+      "http://localhost:5001",
+      "https://web.spirebyte.nl",
+      "https://test.spirebyte.nl",
+      "https://www.spirebyte.nl",
+      "https://admin.spirebyte.nl",
+      "http://192.168.2.25:4200",
+      "http://192.168.2.25:4201"
+    ],
+    "allowedMethods": [
+      "POST",
+      "PUT",
+      "DELETE"
+    ],
+    "allowedHeaders": [
+      "Content-Type",
+      "Authorization"
+    ],
+    "exposedHeaders": [
+      "Resource-ID"
+    ]
   },
   "httpClient": {
-    "type": "",
-    "retries": 3,
-    "services": {
-      "projects": "http://localhost:5001",
-      "identity": "http://localhost:5004"
+    "name": "",
+    "type": "consul",
+    "certificate": {
+      "location": "certs/localhost.pfx",
+      "password": "test"
+    },
+    "resiliency": {
+      "retries": 3,
+      "retryInterval": "00.00:00:03",
+      "exponential": false
     },
     "requestMasking": {
-      "enabled": true,
+      "enabled": false,
+      "urlParts": [
+        "secret"
+      ],
       "maskTemplate": "*****"
     },
-    "correlationIdHeader": "x-correlation-id",
-    "correlationContextHeader": "x-correlation-context"
+    "services": {
+      "projects": "http://projects-service:5001",
+      "identity": "http://identity-service:5004"
+    }
   },
-  "jwt": {
-    "authority": "https://sts.spirebyte.nl",
-    "validIssuer": "https://sts.spirebyte.nl",
-    "validateAudience": false,
-    "validateIssuer": true,
-    "validateLifetime": true,
-    "nameClaimType": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/nameidentifier",
-    "clientId": "repositories",
-    "clientSecret": "494b1e64-832c-f7a1-a15a-25019140b0e8"
+  "messaging": {
+    "resiliency": {
+      "retries": 3,
+      "retryInterval": "00.00:00:03",
+      "exponential": false
+    }
   },
-  "logger": {
-    "level": "warning",
+  "metrics": {
+    "enabled": true,
+    "endpoint": "/metrics",
+    "exporter": "prometheus"
+  },
+  "rabbitMQ": {
+    "enabled": true,
+    "connectionString": "host=localhost;port=5672;virtualHost=/;username=guest;password=guest"
+  },
+  "security": {
+    "encryption": {
+      "key": "SsAGentgn5E9vQRt3XcrcDXY9ZYqFVLw"
+    }
+  },
+  "serilog": {
+    "level": "information",
+    "overrides": {
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
+      "Microsoft.EntityFrameworkCore.Infrastructure": "Warning"
+    },
     "excludePaths": [
       "/",
-      "/ping",
-      "/metrics"
+      "/metrics",
+      "/ping"
     ],
     "excludeProperties": [
       "api_key",
       "access_key",
-      "ApiKey",
-      "ApiSecret",
-      "ClientId",
-      "ClientSecret",
-      "ConnectionString",
-      "Password",
-      "Email",
-      "Login",
-      "Secret",
-      "Token"
+      "password",
+      "email"
     ],
     "console": {
       "enabled": true
     },
-    "elk": {
-      "enabled": false,
-      "url": "http://localhost:9200"
-    },
     "file": {
-      "enabled": true,
-      "path": "Logs/logs.txt",
+      "enabled": false,
+      "path": "logs/logs.txt",
       "interval": "day"
     },
     "seq": {
@@ -88,127 +134,64 @@
     },
     "tags": {}
   },
-  "jaeger": {
+  "swagger": {
     "enabled": true,
-    "serviceName": "git",
-    "udpHost": "localhost",
-    "udpPort": 6831,
-    "maxPacketSize": 0,
-    "sampler": "const",
-    "excludePaths": [
-      "/",
-      "/ping",
-      "/metrics"
-    ]
+    "title": "Git API",
+    "version": "v1",
+    "route": "swagger"
   },
-  "outbox": {
-    "enabled": false,
-    "type": "sequential",
-    "expiry": 3600,
-    "intervalMilliseconds": 2000,
-    "inboxCollection": "inbox",
-    "outboxCollection": "outbox",
-    "DisableTransactions": true
+  "tracing": {
+    "enabled": true,
+    "exporter": "jaeger",
+    "jaeger": {
+      "agentHost": "localhost",
+      "agentPort": 6831,
+      "maxPayloadSizeInBytes": null,
+      "exportProcessorType": "batch"
+    }
   },
   "mongo": {
+    "enabled": true,
     "connectionString": "mongodb://root:4UeQAJgTqbCwjPCH@localhost:27017/?authSource=admin",
     "database": "spirebyte-repositories-service",
     "seed": false
   },
-  "rabbitMq": {
-    "connectionName": "git-service",
-    "retries": 3,
-    "retryInterval": 2,
-    "conventionsCasing": "snakeCase",
-    "logger": {
-      "enabled": true
-    },
-    "username": "guest",
-    "password": "guest",
-    "virtualHost": "/",
-    "port": 5672,
-    "hostnames": [
-      "localhost"
-    ],
-    "requestedConnectionTimeout": "00:00:30",
-    "requestedHeartbeat": "00:01:00",
-    "socketReadTimeout": "00:00:30",
-    "socketWriteTimeout": "00:00:30",
-    "continuationTimeout": "00:00:20",
-    "handshakeContinuationTimeout": "00:00:10",
-    "networkRecoveryInterval": "00:00:05",
-    "exchange": {
-      "declare": true,
-      "durable": true,
-      "autoDelete": false,
-      "type": "topic",
-      "name": "git"
-    },
-    "queue": {
-      "declare": true,
-      "durable": true,
-      "exclusive": false,
-      "autoDelete": false,
-      "template": "git-service/{{exchange}}.{{message}}"
-    },
-    "context": {
-      "enabled": true,
-      "header": "message_context"
-    },
-    "spanContextHeader": "span_context"
-  },
-  "redis": {
-    "connectionString": "localhost",
-    "instance": "git:"
-  },
-  "swagger": {
-    "enabled": true,
-    "reDocEnabled": false,
-    "name": "v1",
-    "title": "API",
-    "version": "v1",
-    "routePrefix": "docs",
-    "includeSecurity": true
-  },
   "vault": {
     "enabled": false,
     "url": "http://localhost:8200",
-    "authType": "token",
-    "token": "secret",
-    "username": "user",
-    "password": "secret",
-    "kv": {
-      "enabled": true,
-      "engineVersion": 2,
-      "mountPoint": "kv",
-      "path": "git-service/settings"
+    "authentication": {
+      "type": "token",
+      "token": {
+        "token": "secret"
+      }
     },
-    "pki": {
+    "KV": {
+      "enabled": true,
+      "path": "git-service"
+    },
+    "PKI": {
       "enabled": true,
       "roleName": "git-service",
-      "commonName": "git-service.spirebyte.io"
+      "commonName": "git-service.spirebyte.io",
+      "importPrivateKey": true,
+      "httpHandler": {
+        "enabled": true,
+        "certificate": "git-service"
+      }
     },
     "lease": {
       "mongo": {
+        "enabled": true,
         "type": "database",
         "roleName": "git-service",
-        "enabled": true,
-        "autoRenewal": true,
         "templates": {
           "connectionString": "mongodb://{{username}}:{{password}}@localhost:27017"
         }
       }
     }
   },
-  "metrics": {
-    "enabled": true,
-    "prometheusEnabled": true,
-    "tags": {
-      "env": "development",
-      "server": "local"
-    }
-  },
-  "minio": {
+  "s3": {
+    "enabled": false,
     "url": "storage.spirebyte.nl",
     "accessKey": "a6qqJrzRsKXyCWBBAiTX",
     "secretKey": "FUszZfph3AqHRdB3kOwh",
