--- a/src/Spirebyte.Services.Git.API/Spirebyte.Services.Git.API.csproj
+++ b/src/Spirebyte.Services.Git.API/Spirebyte.Services.Git.API.csproj
@@ -9,10 +9,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Convey" Version="1.0.531"/>
-        <PackageReference Include="Convey.Logging" Version="1.0.531"/>
-        <PackageReference Include="Convey.WebApi" Version="1.0.531"/>
-        <PackageReference Include="Convey.WebApi.CQRS" Version="1.0.531"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.1">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -20,15 +16,19 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0"/>
+        <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Spirebyte.Services.Git.Infrastructure\Spirebyte.Services.Git.Infrastructure.csproj"/>
+        <ProjectReference Include="..\Spirebyte.Services.Git.Infrastructure\Spirebyte.Services.Git.Infrastructure.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="RepoCache"/>
+        <Folder Include="RepoCache" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Content Include="Certs\**" CopyToPublishDirectory="Always" />
     </ItemGroup>
 
 </Project>
