--- a/src/Spirebyte.Services.Git.Application/Spirebyte.Services.Git.Application.csproj
+++ b/src/Spirebyte.Services.Git.Application/Spirebyte.Services.Git.Application.csproj
@@ -6,16 +6,9 @@
 
     <ItemGroup>
         <PackageReference Include="CliWrap" Version="3.4.1" />
-        <PackageReference Include="Convey" Version="1.0.531" />
-        <PackageReference Include="Convey.CQRS.Commands" Version="1.0.531" />
-        <PackageReference Include="Convey.CQRS.Events" Version="1.0.531" />
-        <PackageReference Include="Convey.CQRS.Queries" Version="1.0.531" />
-        <PackageReference Include="Convey.MessageBrokers" Version="1.0.531" />
-        <PackageReference Include="Convey.WebApi" Version="1.0.531" />
         <PackageReference Include="LibGit2Sharp" Version="0.27.0-preview-0175" />
-        <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-        <PackageReference Include="Partytitan.Convey.Minio" Version="1.0.12" />
-        <PackageReference Include="Spirebyte.Shared" Version="1.0.19" />
+        <PackageReference Include="Spirebyte.Shared" Version="1.0.20" />
+        <PackageReference Include="Spirebyte.Framework" Version="1.1.6" />
     </ItemGroup>
 
     <ItemGroup>
