--- a/src/Spirebyte.Services.Git.Infrastructure/Spirebyte.Services.Git.Infrastructure.csproj
+++ b/src/Spirebyte.Services.Git.Infrastructure/Spirebyte.Services.Git.Infrastructure.csproj
@@ -5,32 +5,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Convey" Version="1.0.531"/>
-        <PackageReference Include="Convey.Auth" Version="1.0.531"/>
-        <PackageReference Include="Convey.Metrics.Prometheus" Version="1.0.531"/>
-        <PackageReference Include="Convey.Secrets.Vault" Version="1.0.531"/>
-        <PackageReference Include="Convey.CQRS.Queries" Version="1.0.531"/>
-        <PackageReference Include="Convey.Discovery.Consul" Version="1.0.531"/>
-        <PackageReference Include="Convey.LoadBalancing.Fabio" Version="1.0.531"/>
-        <PackageReference Include="Convey.HTTP" Version="1.0.531"/>
-        <PackageReference Include="Convey.Logging" Version="1.0.531"/>
-        <PackageReference Include="Convey.MessageBrokers" Version="1.0.531"/>
-        <PackageReference Include="Convey.MessageBrokers.CQRS" Version="1.0.531"/>
-        <PackageReference Include="Convey.MessageBrokers.Outbox" Version="1.0.531"/>
-        <PackageReference Include="Convey.MessageBrokers.RabbitMQ" Version="1.0.531"/>
-        <PackageReference Include="Convey.MessageBrokers.Outbox.Mongo" Version="1.0.531"/>
-        <PackageReference Include="Convey.Metrics.AppMetrics" Version="1.0.531"/>
-        <PackageReference Include="Convey.Persistence.MongoDB" Version="1.0.531"/>
-        <PackageReference Include="Convey.Persistence.Redis" Version="1.0.531"/>
-        <PackageReference Include="Convey.Security" Version="1.0.531"/>
-        <PackageReference Include="Convey.Tracing.Jaeger" Version="1.0.531"/>
-        <PackageReference Include="Convey.Tracing.Jaeger.RabbitMQ" Version="1.0.531"/>
-        <PackageReference Include="Convey.WebApi.CQRS" Version="1.0.531"/>
-        <PackageReference Include="Convey.WebApi.Swagger" Version="1.0.531"/>
+        <PackageReference Include="Spirebyte.Framework.DAL.MongoDb" Version="1.1.6" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Spirebyte.Services.Git.Application\Spirebyte.Services.Git.Application.csproj"/>
+        <ProjectReference Include="..\Spirebyte.Services.Git.Application\Spirebyte.Services.Git.Application.csproj" />
     </ItemGroup>
 
 </Project>
