--- a/src/Spirebyte.Services.Git.API/Dockerfile
+++ b/src/Spirebyte.Services.Git.API/Dockerfile
@@ -1,18 +1,21 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+
+ARG Nuget_CustomFeedUserName
+ARG Nuget_CustomFeedPassword
+
 WORKDIR /src
-COPY ["src/Git-Service/src/Spirebyte.Services.Git.API/Spirebyte.Services.Git.API.csproj", "src/Git-Service/src/Spirebyte.Services.Git.API/"]
-COPY ["src/Git-Service/src/Spirebyte.Services.Git.Infrastructure/Spirebyte.Services.Git.Infrastructure.csproj", "src/Git-Service/src/Spirebyte.Services.Git.Infrastructure/"]
-COPY ["src/Git-Service/src/Spirebyte.Services.Git.Application/Spirebyte.Services.Git.Application.csproj", "src/Git-Service/src/Spirebyte.Services.Git.Application/"]
-COPY ["src/Git-Service/src/Spirebyte.Services.Git.Core/Spirebyte.Services.Git.Core.csproj", "src/Git-Service/src/Spirebyte.Services.Git.Core/"]
-RUN dotnet restore "src/Git-Service/src/Spirebyte.Services.Git.API/Spirebyte.Services.Git.API.csproj"
+COPY ["src/Spirebyte.Services.Git.API/Spirebyte.Services.Git.API.csproj", "src/Spirebyte.Services.Git.API/"]
+COPY ["src/Spirebyte.Services.Git.Infrastructure/Spirebyte.Services.Git.Infrastructure.csproj", "src/Spirebyte.Services.Git.Infrastructure/"]
+COPY ["src/Spirebyte.Services.Git.Application/Spirebyte.Services.Git.Application.csproj", "src/Spirebyte.Services.Git.Application/"]
+COPY ["src/Spirebyte.Services.Git.Core/Spirebyte.Services.Git.Core.csproj", "src/Spirebyte.Services.Git.Core/"]
+RUN dotnet nuget add source --username ${Nuget_CustomFeedUserName} --password ${Nuget_CustomFeedPassword} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Spirebyte-Project-Management/index.json"
+RUN dotnet restore "src/Spirebyte.Services.Git.API/Spirebyte.Services.Git.API.csproj"
 COPY . .
-WORKDIR "/src/src/Git-Service/src/Spirebyte.Services.Git.API"
+WORKDIR "/src/src/Spirebyte.Services.Git.API"
 RUN dotnet build "Spirebyte.Services.Git.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
@@ -21,4 +24,6 @@ RUN dotnet publish "Spirebyte.Services.Git.API.csproj" -c Release -o /app/publis
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+ENV ASPNETCORE_ENVIRONMENT Docker
+ENV ASPNETCORE_FORWARDEDHEADERS_ENABLED true
 ENTRYPOINT ["dotnet", "Spirebyte.Services.Git.API.dll"]
