--- a/src/Spirebyte.Services.Git.API/appsettings.json
+++ b/src/Spirebyte.Services.Git.API/appsettings.json
@@ -5,15 +5,13 @@
     "project": "Spirebyte"
   },
   "auth": {
-    "certificate": {
-      "location": "Certs/localhost.cer"
-    },
-    "jwt": {
-      "validIssuer": "https://sts.spirebyte.nl",
-      "validAudience": "spirebyte",
-      "validateAudience": true,
-      "validateIssuer": true,
-      "validateLifetime": true
+    "oidc": {
+      "authority": "https://account.spirebyte.nl/",
+      "audiences": [
+        "spirebyte-git-api"
+      ],
+      "clientId": "spirebyte-git-api",
+      "clientSecret": "3036b017-73c8-4a1b-9380-affc3fb5cc6a"
     }
   },
   "consul": {
@@ -60,10 +58,6 @@
   "httpClient": {
     "name": "",
     "type": "consul",
-    "certificate": {
-      "location": "certs/localhost.pfx",
-      "password": "test"
-    },
     "resiliency": {
       "retries": 3,
       "retryInterval": "00.00:00:03",
@@ -138,7 +132,10 @@
     "enabled": true,
     "title": "Git API",
     "version": "v1",
-    "route": "swagger"
+    "route": "swagger",
+    "security": {
+      "openIdConnectUrl": "https://account.spirebyte.nl/.well-known/openid-configuration"
+    }
   },
   "tracing": {
     "enabled": true,
