--- a/src/Spirebyte.Services.Git.Application/Spirebyte.Services.Git.Application.csproj
+++ b/src/Spirebyte.Services.Git.Application/Spirebyte.Services.Git.Application.csproj
@@ -2,13 +2,14 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="CliWrap" Version="3.4.1" />
         <PackageReference Include="LibGit2Sharp" Version="0.27.0-preview-0175" />
-        <PackageReference Include="Spirebyte.Shared" Version="1.0.20" />
-        <PackageReference Include="Spirebyte.Framework" Version="1.1.6" />
+        <PackageReference Include="Spirebyte.Shared" Version="1.0.22" />
+        <PackageReference Include="Spirebyte.Framework" Version="1.1.24" />
     </ItemGroup>
 
     <ItemGroup>
