--- a/test/Spirebyte.Services.Git.Tests.Integration/Spirebyte.Services.Git.Tests.Integration.csproj
+++ b/test/Spirebyte.Services.Git.Tests.Integration/Spirebyte.Services.Git.Tests.Integration.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net6.0</TargetFramework>
 
         <IsPackable>false</IsPackable>
+
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
@@ -11,10 +13,10 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.1"/>
-        <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="6.0.1"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0-preview-20211130-02"/>
-        <PackageReference Include="xunit" Version="2.4.2-pre.12"/>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.1" />
+        <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="6.0.1" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0-preview-20211130-02" />
+        <PackageReference Include="xunit" Version="2.4.2-pre.12" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -23,12 +25,12 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="FluentAssertions" Version="6.3.0"/>
+        <PackageReference Include="FluentAssertions" Version="6.3.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\src\Spirebyte.Services.Git.API\Spirebyte.Services.Git.API.csproj"/>
-        <ProjectReference Include="..\..\src\Spirebyte.Services.Git.Infrastructure\Spirebyte.Services.Git.Infrastructure.csproj"/>
-        <ProjectReference Include="..\Spirebyte.Services.Git.Tests.Shared\Spirebyte.Services.Git.Tests.Shared.csproj"/>
+        <ProjectReference Include="..\..\src\Spirebyte.Services.Git.API\Spirebyte.Services.Git.API.csproj" />
+        <ProjectReference Include="..\..\src\Spirebyte.Services.Git.Infrastructure\Spirebyte.Services.Git.Infrastructure.csproj" />
+        <ProjectReference Include="..\Spirebyte.Services.Git.Tests.Shared\Spirebyte.Services.Git.Tests.Shared.csproj" />
     </ItemGroup>
 </Project>
