--- a/test/Spirebyte.Services.Git.Tests.Unit/Spirebyte.Services.Git.Tests.Unit.csproj
+++ b/test/Spirebyte.Services.Git.Tests.Unit/Spirebyte.Services.Git.Tests.Unit.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net6.0</TargetFramework>
 
         <IsPackable>false</IsPackable>
+
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
@@ -11,10 +13,10 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="FluentAssertions" Version="6.3.0"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0-preview-20211130-02"/>
-        <PackageReference Include="NSubstitute" Version="4.2.2"/>
-        <PackageReference Include="xunit" Version="2.4.2-pre.12"/>
+        <PackageReference Include="FluentAssertions" Version="6.3.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0-preview-20211130-02" />
+        <PackageReference Include="NSubstitute" Version="4.2.2" />
+        <PackageReference Include="xunit" Version="2.4.2-pre.12" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -26,9 +28,9 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\src\Spirebyte.Services.Git.Application\Spirebyte.Services.Git.Application.csproj"/>
-        <ProjectReference Include="..\..\src\Spirebyte.Services.Git.Core\Spirebyte.Services.Git.Core.csproj"/>
-        <ProjectReference Include="..\Spirebyte.Services.Git.Tests.Shared\Spirebyte.Services.Git.Tests.Shared.csproj"/>
+        <ProjectReference Include="..\..\src\Spirebyte.Services.Git.Application\Spirebyte.Services.Git.Application.csproj" />
+        <ProjectReference Include="..\..\src\Spirebyte.Services.Git.Core\Spirebyte.Services.Git.Core.csproj" />
+        <ProjectReference Include="..\Spirebyte.Services.Git.Tests.Shared\Spirebyte.Services.Git.Tests.Shared.csproj" />
     </ItemGroup>
 
 </Project>
