Enable s3 bucket access.....

--- a/src/Spirebyte.Services.Git.API/appsettings.json
+++ b/src/Spirebyte.Services.Git.API/appsettings.json
@@ -188,7 +188,7 @@
     }
   },
   "s3": {
-    "enabled": false,
+    "enabled": true,
     "url": "storage.spirebyte.nl",
     "accessKey": "a6qqJrzRsKXyCWBBAiTX",
     "secretKey": "FUszZfph3AqHRdB3kOwh",
